--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="warn">
     <mat-toolbar-row fxLayout="row">
-        <span>Forgot Password?</span>
+        <span>{{ "forgotPassword.title" | translate }}</span>
         <span class="spacer"></span>
         <button class="mat-dialog-close" mat-icon-button mat-dialog-close>
             <mat-icon>close</mat-icon>
@@ -12,11 +12,11 @@
     <form [formGroup]="forgotPasswordForm">
         <div class="form-group" fxFlex fxLayout="column">
             <mat-form-field appearance="outline" fxFlex>
-                <mat-label>Email</mat-label>
+                <mat-label>{{ "forgotPassword.forgotPasswordForm.email" | translate }}</mat-label>
                 <input matInput type="text" formControlName="email" class="form-control" required/>
                 <mat-error *ngIf="forgotPasswordForm.controls.email.touched && forgotPasswordForm.controls.email.invalid">
-                  <span *ngIf="forgotPasswordForm.controls.email.errors.required">This field is mendatory</span>
-                  <span *ngIf="forgotPasswordForm.controls.email.errors.pattern">This field is invalid !</span>
+                  <span *ngIf="forgotPasswordForm.controls.email.errors.required">{{ "forgotPassword.forgotPasswordForm.errorMandatory" | translate }}</span>
+                  <span *ngIf="forgotPasswordForm.controls.email.errors.pattern">{{ "forgotPassword.forgotPasswordForm.errorInvalid" | translate }}</span>
                 </mat-error>
             </mat-form-field>
         </div>
@@ -25,9 +25,9 @@
 
 <mat-dialog-actions align="end">
     <button mat-raised-button color="primary" type="submit" (click)="handleSubmit()" [disabled]="!(forgotPasswordForm.valid && forgotPasswordForm.dirty)">
-        <mat-icon>send</mat-icon> Send Password
+        <mat-icon>send</mat-icon> {{ "forgotPassword.forgotPasswordForm.submit" | translate }}
     </button>
     <button mat-raised-button color="warn" mat-dialog-close>
-        <mat-icon>cancel</mat-icon> Close
+        <mat-icon>cancel</mat-icon> {{ "forgotPassword.forgotPasswordForm.close" | translate }}
     </button>
 </mat-dialog-actions>
