--- a/src/app/material-component/dialog/proposition/proposition.component.html
+++ b/src/app/material-component/dialog/proposition/proposition.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="warn">
     <mat-toolbar-row fxLayout="row">
         <span>{{dialogData.action}} Proposition</span>
         <span class="spacer"></span>
