--- a/src/app/material-component/manage-theme/manage-theme.component.html
+++ b/src/app/material-component/manage-theme/manage-theme.component.html
@@ -37,9 +37,9 @@
                     <mat-icon>delete</mat-icon>
                 </button>
 
-                <button mat-icon-button color="primary" matTooltip="Show" (click)="handleShowAction(element)">
+                <!--<button mat-icon-button color="primary" matTooltip="Show" (click)="handleShowAction(element)">
                     <mat-icon>explore</mat-icon>
-                </button>
+                </button>-->
             </td>
         </ng-container>
 
