--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -105,3 +105,47 @@ button:hover{
     border: none;
 } 
 
+/*Dropdwn Button*/
+.dropbtn{
+    color:#fff;
+    font-size: 18px;
+    border: none;
+}
+
+/*The Container <div> - needed to position the dropdown content*/
+.dropdown{
+    position: relative;
+    display: inline-block;
+}
+
+/*Dropdown Content (Hidden by default) */
+.dropdown-content{
+    display: none;
+    position: relative;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/*Links inside the dropdown */
+.dropdown-content a{
+    color: black;
+    padding: 12px 12px;
+    cursor: pointer;
+}
+
+/*Change color of dropdown links on hover */
+.dropdown-content a:hover{
+    border-radius: 50px;
+    background-color: rgba(0,0,0,0.2);
+    min-width: 160px;
+}
+
+/*Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content{
+    padding: 12px 12px;
+    display: block;
+}
+
+/*change the background color of the dropdown buton when the  dropdown content is down*/
+
