--- a/src/app/material-component/dialog/change-password/change-password.component.html
+++ b/src/app/material-component/dialog/change-password/change-password.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="warn">
     <mat-toolbar-row fxLayout="row">
-        <span>Change Password</span>
+        <span>{{ "changePassword.title" | translate }}</span>
         <span class="spacer"></span>
         <button class="mat-dialog-close" mat-icon-button mat-dialog-close>
             <mat-icon>close</mat-icon>
@@ -14,7 +14,7 @@
         <div class="form-group" fxFlex fxLayout="column">
 
             <mat-form-field appearance="outline" fxFlex>
-                <mat-label>Old Password</mat-label>
+                <mat-label>{{ "changePassword.changePasswordForm.oldPassword" | translate }}</mat-label>
                 <input matInput type="password" formControlName="oldPassword" required
                     [type]="oldPassword ? 'password': 'text'">
                 <button type="button" mat-icon-button matSuffix (click)="oldPassword = !oldPassword"
@@ -23,13 +23,12 @@
                 </button>
                 <mat-error *ngIf="changePasswordForm.controls.oldPassword.touched && 
                 changePasswordForm.controls.oldPassword.invalid">
-                    <span *ngIf="changePasswordForm.controls.oldPassword.errors.required">This Fiels is
-                        Mandatory.</span>
+                    <span *ngIf="changePasswordForm.controls.oldPassword.errors.required">{{ "errorMandatory" | translate }}</span>
                 </mat-error>
             </mat-form-field>
 
             <mat-form-field appearance="outline" fxFlex>
-                <mat-label>New Password</mat-label>
+                <mat-label>{{ "changePassword.changePasswordForm.newPassword" | translate }}</mat-label>
                 <input matInput type="password" formControlName="newPassword" required
                     [type]="newPassword ? 'password': 'text'">
                 <button type="button" mat-icon-button matSuffix (click)="newPassword = !newPassword"
@@ -38,13 +37,12 @@
                 </button>
                 <mat-error *ngIf="changePasswordForm.controls.newPassword.touched && 
                 changePasswordForm.controls.newPassword.invalid">
-                    <span *ngIf="changePasswordForm.controls.newPassword.errors.required">This Fiels is
-                        Mandatory.</span>
+                    <span *ngIf="changePasswordForm.controls.newPassword.errors.required">{{ "errorMandatory" | translate }}</span>
                 </mat-error>
             </mat-form-field>
 
             <mat-form-field appearance="outline" fxFlex>
-                <mat-label>Confirm Password</mat-label>
+                <mat-label>{{ "changePassword.changePasswordForm.confirmPassword" | translate }}</mat-label>
                 <input matInput type="password" formControlName="confirmPassword" required
                     [type]="confirmPassword ? 'password': 'text'">
                 <button type="button" mat-icon-button matSuffix (click)="confirmPassword = !confirmPassword"
@@ -53,11 +51,10 @@
                 </button>
                 <mat-error *ngIf="changePasswordForm.controls.confirmPassword.touched && 
                 changePasswordForm.controls.confirmPassword.invalid">
-                    <span *ngIf="changePasswordForm.controls.confirmPassword.errors.required">This Fiels is
-                        Mandatory.</span>
+                    <span *ngIf="changePasswordForm.controls.confirmPassword.errors.required">{{ "errorMandatory" | translate }}</span>
                 </mat-error>
                 <mat-hint *ngIf="validateSubmit() && !(changePasswordForm.controls.confirmPassword.invalid)">
-                    <span>New Password & Confirm Password does not Match.</span>
+                    <span>{{ "noConformPassword" | translate }}</span>
                 </mat-hint>
             </mat-form-field>
         </div>
@@ -67,10 +64,10 @@
 <mat-dialog-actions align="end">
     <button mat-raised-button color="primary" type="submit" (click)="handlePasswordChangeSubmit()"
         [disabled]="validateSubmit() || !(changePasswordForm.valid && changePasswordForm.dirty)">
-        <mat-icon>save</mat-icon> Update
+        <mat-icon>save</mat-icon> {{ "changePassword.changePasswordForm.submit" | translate }}
     </button>
 
     <button mat-raised-button color="warn" mat-dialog-close>
-        <mat-icon>close</mat-icon> Close
+        <mat-icon>close</mat-icon> {{ "changePassword.changePasswordForm.close" | translate }}
     </button>
 </mat-dialog-actions>
