--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="warn">
   <mat-toolbar-row fxLayout="row">
-      <span>Signup</span>
+      <span>{{ "signup.title" | translate }}</span>
       <span class="spacer"></span>
       <button class="mat-dialog-close" mat-icon-button mat-dialog-close>
           <mat-icon>close</mat-icon>
@@ -13,50 +13,50 @@
     <form [formGroup]="signupForm"  method="POST">
       <div class="form-group" fxFlex fxLayout="column">
         <mat-form-field appearance="outline" fxFlex>
-          <mat-label>Last Name</mat-label>
+          <mat-label>{{ "signup.signupForm.lastName" | translate }}</mat-label>
           <input matInput type="text" formControlName="lastName" class="form-control" required/>
           <mat-error *ngIf="signupForm.controls.lastName.touched && signupForm.controls.lastName.invalid">
-            <span *ngIf="signupForm.controls.lastName.errors.required">This field is mendatory</span>
-            <span *ngIf="signupForm.controls.lastName.errors.pattern">This field is invalid !</span>
+            <span *ngIf="signupForm.controls.lastName.errors.required">{{ "signup.signupForm.errorMandatory" | translate }}</span>
+            <span *ngIf="signupForm.controls.lastName.errors.pattern">{{ "signup.signupForm.errorInvalid" | translate }}</span>
           </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline" fxFlex>
-          <mat-label>First Name</mat-label>
+          <mat-label>{{ "signup.signupForm.firstName" | translate }}</mat-label>
           <input matInput type="text" formControlName="firstName" class="form-control" required/>
           <mat-error *ngIf="signupForm.controls.firstName.touched && signupForm.controls.firstName.invalid">
-            <span *ngIf="signupForm.controls.firstName.errors.required">This field is mendatory</span>
-            <span *ngIf="signupForm.controls.firstName.errors.pattern">This field is invalid !</span>
+            <span *ngIf="signupForm.controls.firstName.errors.required">{{ "signup.signupForm.errorMandatory" | translate }}</span>
+            <span *ngIf="signupForm.controls.firstName.errors.pattern">{{ "signup.signupForm.errorInvalid" | translate }}</span>
           </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline" fxFlex>
-          <mat-label>Email</mat-label>
+          <mat-label>{{ "signup.signupForm.email" | translate }}</mat-label>
           <input matInput type="text" formControlName="email" class="form-control" required/>
           <mat-error *ngIf="signupForm.controls.email.touched && signupForm.controls.email.invalid">
-            <span *ngIf="signupForm.controls.email.errors.required">This field is mendatory</span>
-            <span *ngIf="signupForm.controls.email.errors.pattern">This field is invalid !</span>
+            <span *ngIf="signupForm.controls.email.errors.required">{{ "signup.signupForm.errorMandatory" | translate }}</span>
+            <span *ngIf="signupForm.controls.email.errors.pattern">{{ "signup.signupForm.errorInvalid" | translate }}</span>
           </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline" fxFlex>
-          <mat-label>Password</mat-label>
+          <mat-label>{{ "signup.signupForm.passWord" | translate }}</mat-label>
           <input matInput formControlName="password" type="password" class="form-control" required [type]="password ? 'password': 'text'"/>
           <button type="button" mat-icon-button matSuffix (click)="password = !password" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="password">
             <mat-icon>{{ password ? 'visibility_off' : 'visibility' }}</mat-icon>
           </button> 
           <mat-error *ngIf="signupForm.controls.password.touched && signupForm.controls.password.invalid">
-            <span *ngIf="signupForm.controls.password.errors.required">This field is mendatory</span>
+            <span *ngIf="signupForm.controls.password.errors.required">{{ "signup.signupForm.errorMandatory" | translate }}</span>
           </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline" fxFlex>
-          <mat-label>Confirm Password</mat-label>
+          <mat-label>{{ "signup.signupForm.confirmPassword" | translate }}</mat-label>
           <input matInput formControlName="confirmPassword" type="password" class="form-control" required [type]="confirmPassword ? 'password': 'text'"/>
           <button type="button" mat-icon-button matSuffix (click)="confirmPassword = !confirmPassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="password">
             <mat-icon>{{ confirmPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
           </button> 
           <mat-error *ngIf="signupForm.controls.confirmPassword.touched && signupForm.controls.confirmPassword.invalid">
-            <span *ngIf="signupForm.controls.confirmPassword.errors.required">This field is mendatory</span>
+            <span *ngIf="signupForm.controls.confirmPassword.errors.required">{{ "signup.signupForm.errorMandatory" | translate }}</span>
           </mat-error>
           <mat-hint *ngIf="validateSubmit() && !(signupForm.controls.confirmPassword.invalid)">
-            <span>New Password & Confirm Password does not match.</span>
+            <span>{{ "signup.signupForm.noConformPassword" | translate }}</span>
           </mat-hint>
         </mat-form-field>
       </div>
@@ -66,9 +66,9 @@
 
 <mat-dialog-actions align="end">
   <button mat-raised-button color="primary" type="submit" (click)="handleSubmit()" [disabled]="validateSubmit() || !(signupForm.valid && signupForm.dirty)">
-    <mat-icon>save</mat-icon> Signup
+    <mat-icon>save</mat-icon> {{ "signup.signupForm.submit" | translate }}
   </button>
   <button mat-raised-button color="warn" mat-dialog-close>
-    <mat-icon>cancel</mat-icon> Cancel
+    <mat-icon>cancel</mat-icon> {{ "signup.signupForm.close" | translate }}
   </button>
 </mat-dialog-actions>
