Update Qcm Details Component

--- a/src/app/material-component/manage-qcm/manage-qcm.component.html
+++ b/src/app/material-component/manage-qcm/manage-qcm.component.html
@@ -55,6 +55,10 @@
                 <button mat-icon-button color="primary" matTooltip="Add Question" (click)="handleAddQuestionsAction(element)">
                     <mat-icon>add_circle</mat-icon>
                 </button>
+
+                <button mat-icon-button color="primary" matTooltip="Show Detail" (click)="handleAddShowDetails(element)">
+                    <mat-icon>explore</mat-icon>
+                </button>
             </td>
         </ng-container>
 
