--- a/src/app/material-component/details/detail-passage/detail-passage.component.html
+++ b/src/app/material-component/details/detail-passage/detail-passage.component.html
@@ -67,6 +67,9 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
+    <button mat-raised-button color="primary" type="submit" (click)="gotoManageQuiz()">
+        <mat-icon>send</mat-icon> Send
+    </button>
     <button mat-raised-button color="warn" mat-dialog-close>
         <mat-icon>cancel</mat-icon> Close
     </button>
